# smart_tg_bot

./: .env.sample  README.md  pyproject.toml
resources/menus/: main.json
resources/messages/: gpt.html  main.html  quiz.html  random.html  resume.html  talk.html  translate.html  voice_chat.html
resources/prompts/: einstein.txt  gpt.txt  king.txt  mercury.txt  napoleon.txt  quiz.txt  random.txt  resume.txt  translate.txt  voice_chat.txt
src/: bot.py  config.py  main.py  openapi_client.py  utils.py
src/bot/: audio_converter_stt.py  commands.py  file_converter.py  keyboards.py  message_sender.py  resource_loader.py  sanitize_html.py
src/bot/commands/: __init__.py  gpt.py  quiz.py  random.py  resume.py  start.py  talk.py  translate.py  voice_chat.py
src/db/: enums.py  initializer.py  repository.py
src/resources/messages/: main.txt
src/services/: __init__.py
src/services/chatgpt/: assis_manager_client.py  client.py
src/services/speech_to_text/: client_stt.py
src/services/text_to_speech/: client_tts.py
src/settings/: __init__.py  config.py  logging_config.py
